--- a/package.json
+++ b/package.json
@@ -92,11 +92,11 @@
     "@react-mutate/loader": "^0.4.4",
     "animate-css-styled-components": "0.0.19",
     "axios": "^0.17.0",
-    "debounce": "^1.0.2",
     "bookshelf": "^0.10.4",
     "bookshelf-cascade-delete": "^2.0.1",
     "db-migrate": "^0.10.0-beta.24",
     "db-migrate-sqlite3": "^0.2.1",
+    "debounce": "^1.0.2",
     "draft-js": "^0.10.1",
     "electron-debug": "^1.4.0",
     "electron-default-menu": "^1.0.1",
@@ -110,10 +110,11 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "string": "^3.3.3",
     "sqlite3": "^3.1.13",
+    "string": "^3.3.3",
     "styled-components": "^2.1.2",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "voca": "^1.3.0"
   },
   "build": {
     "appId": "com.flaque.penguin",
