--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
   "scripts": {
     "build": "webpack --config app/renderer/renderer.config.js",
     "db-migrate-create": "node node_modules/db-migrate/bin/db-migrate create $NAME -e dev --config config/database.json",
-    "test": "NODE_ENV=test ./node_modules/.bin/jest",
-    "test-windows": "set NODE_ENV=test&& npm run test-windows2",
-    "test-windows2": "./node_modules/.bin/jest",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/jest",
     "test-on-ci": "xvfb-maybe ./node_modules/.bin/jest --runInBand",
     "test-watch": "./node_modules/.bin/jest --watch",
     "plop": "./node_modules/.bin/plop",
     "lint": "./node_modules/.bin/eslint lib app",
     "lint-fix": "./node_modules/.bin/eslint --fix lib app",
-    "dev": "NODE_ENV=dev && npm run build && electron app/main/index.js",
-    "prod": "NODE_ENV=prod && npm run build && electron app/main/index.js",
+    "dev": "cross-env NODE_ENV=dev && npm run build && electron app/main/index.js",
+    "prod": "cross-env NODE_ENV=prod && npm run build && electron app/main/index.js",
     "dev-down": "node node_modules/db-migrate/bin/db-migrate down -e dev --config config/database.json",
     "prod-down": "node node_modules/db-migrate/bin/db-migrate down -e prod --config config/database.json",
     "test-down": "node node_modules/db-migrate/bin/db-migrate down -e test --config config/database.json",
@@ -46,6 +44,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-stage-2": "^6.24.1",
     "coveralls": "^2.13.1",
+    "cross-env": "^5.1.1",
     "devtron": "^1.4.0",
     "electron": "^1.7.9",
     "electron-packager": "^9.1.0",
