Update scripts to create db config and add notes to environments (#64)
* Update scripts to create db config and add notes to environments

* Trying to retrigger tests

* Set jest version to specific version

* Moved back to regular version of jest

* Fix snapshots

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "prod": "cross-env NODE_ENV=prod && npm run build && electron app/main/index.js",
     "db-down": "node node_modules/db-migrate/bin/db-migrate down -e $ENV --config config/database.json",
     "db-up": "node node_modules/db-migrate/bin/db-migrate up -e $ENV --config config/database.json",
-    "dev-reset": "node node_modules/db-migrate/bin/db-migrate reset -e $ENV --config config/database.json",
-    "db-create-config": "babel-node lib/io/sqlite/scripts/createDatabaseConfig.js",
+    "db-reset": "node node_modules/db-migrate/bin/db-migrate reset -e $ENV --config config/database.json",
+    "db-create-config": "cross-env NODE_ENV=dev babel-node scripts/create-db-config/create.js",
     "db-migrate-create": "node node_modules/db-migrate/bin/db-migrate create $NAME -e dev --config config/database.json",
+    "add-some-notes": "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_small_dataset.json",
+    "add-many-notes": "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_large_dataset.json",
     "fmt": "./node_modules/.bin/prettier --write '!(coverage|scripts|.vscode|node_modules)/**/!(.compiled|build|dist)/*.js'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
