--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/jest",
     "dist": "yarn compile && electron-builder",
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
-    "db-down": "node node_modules/db-migrate/bin/db-migrate down -e $ENV --config config/database.json",
-    "db-up": "node node_modules/db-migrate/bin/db-migrate up -e $ENV --config config/database.json",
-    "dev-reset": "node node_modules/db-migrate/bin/db-migrate reset -e $ENV --config config/database.json",
-    "db-create-config": "babel-node lib/io/sqlite/scripts/createDatabaseConfig.js",
-    "db-migrate-create": "node node_modules/db-migrate/bin/db-migrate create $NAME -e dev --config config/database.json",
+    "db-down":
+      "node node_modules/db-migrate/bin/db-migrate down -e $ENV --config config/database.json",
+    "db-up":
+      "node node_modules/db-migrate/bin/db-migrate up -e $ENV --config config/database.json",
+    "dev-reset":
+      "node node_modules/db-migrate/bin/db-migrate reset -e $ENV --config config/database.json",
+    "db-create-config":
+      "babel-node lib/io/sqlite/scripts/createDatabaseConfig.js",
+    "db-migrate-create":
+      "node node_modules/db-migrate/bin/db-migrate create $NAME -e dev --config config/database.json",
     "lint": "./node_modules/.bin/eslint src"
   },
   "dependencies": {
@@ -46,9 +51,11 @@
     "webpack": "^3.8.1"
   },
   "jest": {
-    "setupFiles": [
-      "raf/polyfill",
-      "enzyme-react-16-adapter-setup"
-    ]
+    "setupFiles": ["raf/polyfill", "enzyme-react-16-adapter-setup"],
+    "collectCoverage": true,
+    "coverageDirectory": "<rootDir>/coverage",
+    "coveragePathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
+    "testPathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
+    "coverageReporters": ["text", "lcov"]
   }
 }
