--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,10 @@
 language: node_js
 node_js:
   - "8"
-addons:
-  apt:
-    packages:
-      - xvfb
 script:
-  - npm install
-  - npm run lint
-  - npm run test-on-ci
+  - yarn 
+  - yarn lint
 cache:
   directories:
     - node_modules
 after_script: "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
