--- a/package.json
+++ b/package.json
@@ -24,14 +24,29 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bookshelf": "^0.10.4",
+    "bookshelf-cascade-delete": "^2.0.1",
     "db-migrate": "^0.10.0-beta.24",
+    "db-migrate-sqlite3": "^0.2.1",
     "debounce": "^1.1.0",
     "draft-js": "^0.10.4",
+    "electron-debug": "^1.4.0",
+    "electron-default-menu": "^1.0.1",
+    "fs-jetpack": "^1.2.0",
+    "fuse.js": "^3.1.0",
+    "immutable-props": "^1.1.0",
+    "isdev": "^1.0.1",
     "knex": "^0.14.0",
+    "linklocal": "^2.8.1",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "source-map-support": "^0.5.0",
-    "styled-components": "^2.2.3"
+    "sqlite3": "^3.1.13",
+    "styled-components": "^2.2.3",
+    "uuid": "^3.1.0",
+    "voca": "^1.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
@@ -46,10 +61,12 @@
     "eslint": "^4.10.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-unicorn": "^2.1.2",
     "jest": "^21.2.1",
     "raf": "^3.4.0",
+    "prettier": "^1.5.2",
     "react-test-renderer": "^16.0.0",
     "sinon": "^4.1.2",
     "webpack": "^3.8.1"
