--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "fuse.js": "^3.1.0",
     "immutable-props": "^1.1.0",
     "isdev": "^1.0.1",
-    "knex": "^0.14.0",
+    "knex": "^0.13.0",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
@@ -70,6 +70,7 @@
     "jest-css-modules": "^1.1.0",
     "raf": "^3.4.0",
     "prettier": "^1.5.2",
+    "pre-commit": "^1.2.2",
     "react-test-renderer": "^16.0.0",
     "regenerator-runtime": "^0.11.0",
     "sinon": "^4.1.2",
