--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "source-map-support": "^0.5.0",
     "sqlite3": "^3.1.13",
     "styled-components": "^2.2.3",
@@ -68,9 +70,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
     "jest-css-modules": "^1.1.0",
-    "raf": "^3.4.0",
     "prettier": "^1.5.2",
+    "raf": "^3.4.0",
     "react-test-renderer": "^16.0.0",
+    "redux-devtools": "^3.4.0",
     "regenerator-runtime": "^0.11.0",
     "sinon": "^4.1.2",
     "webpack": "^3.8.1"
