--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/jest",
     "dist": "yarn compile && electron-builder",
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
-    "db-down": "node node_modules/db-migrate/bin/db-migrate down --config config/database.json",
-    "db-up": "node node_modules/db-migrate/bin/db-migrate up --config config/database.json",
-    "db-reset": "node node_modules/db-migrate/bin/db-migrate reset --config config/database.json",
-    "db-create-config": "cross-env NODE_ENV=dev babel-node scripts/create-db-config/create.js",
-    "db-migrate-create": "node node_modules/db-migrate/bin/db-migrate create -e dev --config config/database.json",
-    "add-some-notes": "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_small_dataset.json",
-    "add-many-notes": "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_large_dataset.json",
-    "lint": "./node_modules/.bin/eslint src"
+    "db-down":
+      "node node_modules/db-migrate/bin/db-migrate down --config config/database.json",
+    "db-up":
+      "node node_modules/db-migrate/bin/db-migrate up --config config/database.json",
+    "db-reset":
+      "node node_modules/db-migrate/bin/db-migrate reset --config config/database.json",
+    "db-create-config":
+      "cross-env NODE_ENV=dev babel-node scripts/create-db-config/create.js",
+    "db-migrate-create":
+      "node node_modules/db-migrate/bin/db-migrate create -e dev --config config/database.json",
+    "add-some-notes":
+      "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_small_dataset.json",
+    "add-many-notes":
+      "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_large_dataset.json",
+    "lint": "./node_modules/.bin/eslint src",
+    "postinstall": " electron-builder install-app-deps"
   },
   "dependencies": {
     "@react-mutate/core": "^0.4.4",
@@ -37,7 +45,7 @@
     "fuse.js": "^3.1.0",
     "immutable-props": "^1.1.0",
     "isdev": "^1.0.1",
-    "knex": "^0.13.0",
+    "knex": "^0.14.0",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
@@ -46,7 +54,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "source-map-support": "^0.5.0",
-    "sqlite3": "^3.1.13",
+    "sqlite3": "https://github.com/mapbox/node-sqlite3/tarball/master",
     "styled-components": "^2.2.3",
     "tmp": "^0.0.33",
     "uuid": "^3.1.0",
@@ -56,6 +64,8 @@
     "babel-eslint": "^8.0.2",
     "babel-jest": "^21.2.0",
     "babel-plugin-react-css-modules": "^3.3.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
     "coveralls": "^2.13.1",
     "cross-env": "^5.1.1",
     "electron": "1.7.9",
@@ -82,28 +92,15 @@
     "webpack": "^3.8.1"
   },
   "jest": {
-    "setupFiles": [
-      "raf/polyfill",
-      "enzyme-react-16-adapter-setup"
-    ],
+    "setupFiles": ["raf/polyfill", "enzyme-react-16-adapter-setup"],
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/templates/",
-      "/dist/"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/templates/",
-      "/dist/"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ],
+    "coveragePathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
+    "testPathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
+    "coverageReporters": ["text", "lcov"],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     }
   }
