--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "fuse.js": "^3.1.0",
     "immutable-props": "^1.1.0",
     "isdev": "^1.0.1",
-    "knex": "^0.14.0",
+    "knex": "^0.13.0",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
@@ -53,7 +53,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "source-map-support": "^0.5.0",
-    "sqlite3": "https://github.com/mapbox/node-sqlite3/tarball/master",
+    "sqlite3": "^3.1.13",
     "styled-components": "^2.2.3",
     "tmp": "^0.0.33",
     "uuid": "^3.1.0",
