--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "electron-default-menu": "^1.0.1",
     "fs-jetpack": "^1.2.0",
     "fuse.js": "^3.1.0",
+    "halogen": "^0.2.0",
+    "immutable": "^3.8.2",
     "immutable-props": "^1.1.0",
     "isdev": "^1.0.1",
+    "json-parse-safe": "^1.0.3",
     "knex": "^0.13.0",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
@@ -53,6 +56,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-spinners": "^0.2.1",
     "react-split-pane": "^0.1.68",
     "redux": "^3.7.2",
     "source-map-support": "^0.5.0",
@@ -94,7 +98,10 @@
   },
   "electronWebpack": {
     "main": {
-      "webpackConfig": "webpack.main.additions.js"
+      "webpackConfig": "webpack.babel-polyfill.main.js"
+    },
+    "renderer": {
+      "webpackConfig": "webpack.babel-polyfill.renderer.js"
     }
   },
   "jest": {
