--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "add-many-notes": "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_large_dataset.json",
     "lint": "./node_modules/.bin/eslint src",
     "postinstall": " electron-builder install-app-deps",
-    "snyk-protect": "snyk protect",
+    "snyk-protect": "snyk protect"
   },
   "dependencies": {
     "@react-mutate/core": "^0.4.4",
