--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "db-down": "node node_modules/db-migrate/bin/db-migrate down --config config/database.json",
     "db-up": "node node_modules/db-migrate/bin/db-migrate up --config config/database.json",
     "db-reset": "node node_modules/db-migrate/bin/db-migrate reset --config config/database.json",
-    "db-create-config": "cross-env NODE_ENV=dev babel-node scripts/create-db-config/create.js",
+    "db-create-config": "cross-env NODE_ENV=development babel-node scripts/create-db-config/create.js",
     "db-migrate-create": "node node_modules/db-migrate/bin/db-migrate create -e dev --config config/database.json",
-    "add-some-notes": "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_small_dataset.json",
-    "add-many-notes": "cross-env NODE_ENV=$ENV babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_large_dataset.json",
+    "add-some-notes": "cross-env NODE_ENV=development babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_small_dataset.json",
+    "add-many-notes": "cross-env NODE_ENV=development babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_large_dataset.json",
+    "create-note": "cross-env NODE_ENV=development babel-node scripts/create-note/create.js",
     "lint": "./node_modules/.bin/eslint src",
     "postinstall": " electron-builder install-app-deps",
     "snyk-protect": "snyk protect"
@@ -56,6 +57,8 @@
     "react-style-proptype": "^3.1.0",
     "react-toastify": "^2.2.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "source-map-support": "^0.5.0",
     "sqlite3": "^3.1.13",
     "styled-components": "^2.2.3",
