--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "electron-webpack dev",
+    "dev-log-redux": "cross-env LOG_REDUX=true yarn dev",
     "compile": "electron-webpack",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/jest",
     "dist": "yarn compile && electron-builder",
