--- a/package.json
+++ b/package.json
@@ -43,17 +43,18 @@
     "fs-jetpack": "^1.2.0",
     "fuse.js": "^3.1.0",
     "halogen": "^0.2.0",
-    "immutable": "^3.8.2",
     "immutable-props": "^1.1.0",
     "inline-style-prefixer": "^3.0.8",
     "isdev": "^1.0.1",
     "json-parse-safe": "^1.0.3",
+    "key-code": "^0.0.1",
     "knex": "^0.13.0",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-feather": "^1.0.7",
     "react-redux": "^5.0.6",
     "react-split-pane": "^0.1.68",
     "react-style-proptype": "^3.1.0",
@@ -61,13 +62,13 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "snyk": "^1.50.0",
     "source-map-support": "^0.5.0",
     "sqlite3": "^3.1.13",
     "styled-components": "^2.2.3",
     "tmp": "^0.0.33",
     "uuid": "^3.1.0",
-    "voca": "^1.3.0",
-    "snyk": "^1.50.0"
+    "voca": "^1.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
