--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "snyk": "^1.50.0",
     "source-map-support": "^0.5.0",
     "sqlite3": "^3.1.13",
     "styled-components": "^2.2.3",
     "tmp": "^0.0.33",
     "uuid": "^3.1.0",
-    "voca": "^1.3.0",
-    "snyk": "^1.50.0"
+    "voca": "^1.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
@@ -79,7 +79,8 @@
     "cross-env": "^5.1.1",
     "electron": "1.7.9",
     "electron-builder": "^19.42.1",
-    "electron-webpack": "1.10.1",
+    "electron-webpack": "1.12.1",
+    "webpack-sources": "1.0.1",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
     "enzyme-react-16-adapter-setup": "^0.1.0",
