--- a/package.json
+++ b/package.json
@@ -135,5 +135,8 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     }
-  }
+  },
+  "resolutions": {
+    "webpack-sources": "1.0.1"
+}
 }
