--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["env", "react", "stage-0"],
+  "presets": [["env", { "modules": false }], "react", "stage-0"],
   "plugins": ["transform-regenerator", "react-css-modules"]
 }
