--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-feather": "^1.0.7",
+    "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-split-pane": "^0.1.68",
     "react-style-proptype": "^3.1.0",
@@ -138,5 +139,5 @@
   },
   "resolutions": {
     "webpack-sources": "1.0.1"
-}
+  }
 }
