--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
+    "rc-menu": "^6.2.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-feather": "^1.0.7",
