Got db migrations to look in Contents/Resources/app

--- a/package.json
+++ b/package.json
@@ -140,5 +140,12 @@
   },
   "resolutions": {
     "webpack-sources": "1.0.1"
+  },
+  "build": {
+    "asar": false,
+    "extraResources": {
+      "from": "./migrations",
+      "to": "./app"
+    }
   }
 }
