Added a last saved at thing to notes

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "knex": "^0.13.0",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
+    "moment": "^2.21.0",
     "prop-types": "^15.5.10",
     "rc-menu": "^6.2.6",
     "react": "^16.0.0",
