--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "compile": "electron-webpack",
     "update-snapshot-tests": "./node_modules/.bin/jest --updateSnapshot",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/jest",
+    "update-snapshot-tests": "./node_modules/.bin/jest --updateSnapshot",
     "dist": "yarn compile && electron-builder",
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
     "db-down": "node node_modules/db-migrate/bin/db-migrate down --config config/database.json",
@@ -62,6 +63,7 @@
     "react-split-pane": "^0.1.68",
     "react-style-proptype": "^3.1.0",
     "react-toastify": "^2.2.0",
+    "react-tooltip": "^3.4.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
