--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "db-migrate": "^0.10.0-beta.24",
     "db-migrate-sqlite3": "^0.2.1",
     "debounce": "^1.1.0",
-    "draft-js": "^0.10.4",
+    "draft-js": "0.10.4",
     "draft-js-plugins-editor": "^2.0.4",
     "electron-debug": "^1.4.0",
     "electron-default-menu": "^1.0.1",
