--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Aurora",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "dev": "electron-webpack dev",
@@ -8,7 +8,7 @@
     "compile": "electron-webpack",
     "update-snapshot-tests": "./node_modules/.bin/jest --updateSnapshot",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/jest",
-    "dist": "yarn compile && electron-builder",
+    "dist": "yarn compile && electron-builder --prepackaged dist",
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
     "db-down": "node node_modules/db-migrate/bin/db-migrate down --config config/database.json",
     "db-up": "node node_modules/db-migrate/bin/db-migrate up --config config/database.json",
@@ -19,7 +19,8 @@
     "add-many-notes": "cross-env NODE_ENV=development babel-node scripts/convert-notes/convert.js scripts/convert-notes/our_large_dataset.json",
     "create-note": "cross-env NODE_ENV=development babel-node scripts/create-note/create.js",
     "lint": "./node_modules/.bin/eslint src",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "release": "yarn compile && electron-builder --publish always"
   },
   "dependencies": {
     "@react-mutate/core": "^0.6.0",
