--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile": "electron-webpack",
     "update-snapshot-tests": "./node_modules/.bin/jest --updateSnapshot",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/jest",
-    "dist": "yarn compile && electron-builder --prepackaged dist",
+    "dist": "yarn compile && electron-builder dist",
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
     "db-down": "node node_modules/db-migrate/bin/db-migrate down --config config/database.json",
     "db-up": "node node_modules/db-migrate/bin/db-migrate up --config config/database.json",
@@ -67,7 +67,6 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "snyk": "^1.50.0",
     "source-map-support": "^0.5.0",
     "sqlite3": "^3.1.13",
     "styled-components": "^2.2.3",
