--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ install:
   - npm install
 
 script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then npm run release; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then npm run release -- --mac --win; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "linux release"; npm run release; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "mac release"; npm run release -- --mac --win; fi
 
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
